--- a/src/app/selected-recipe/directions/directions.html
+++ b/src/app/selected-recipe/directions/directions.html
@@ -12,6 +12,7 @@
         <div>
             <h4 [innerHTML]="dataService.selectedRecipe.inspiration"></h4>
             <img (click)="like()" [src]="dataService.selectedRecipe.heartIcon" alt="icon">
+            <p>{{currentRecipe.title}}</p>
         </div>
     </div>
 </section>
