--- a/src/app/cuisine-collection/cuisine-collection.mobile.scss
+++ b/src/app/cuisine-collection/cuisine-collection.mobile.scss
@@ -17,7 +17,7 @@
 
     .generate-btn {
         position: absolute;
-        bottom: 24px;
+        bottom: 32px;
         right: 8px;
     }
 
@@ -26,7 +26,11 @@
     }
 
     section {
+        position: relative;
+
         >div {
+            margin-bottom: 120px;
+
             >article {
                 >div:nth-child(1) {
                     >div:nth-child(2) {
