--- a/src/app/selected-recipe/directions/directions.scss
+++ b/src/app/selected-recipe/directions/directions.scss
@@ -13,5 +13,9 @@
         justify-content: center;
         align-items: center;
         gap: 16px;
+
+        >img {
+            cursor: pointer;
+        }
     }
 }
