--- a/src/app/selected-recipe/dish-title/dish-title.mobile.scss
+++ b/src/app/selected-recipe/dish-title/dish-title.mobile.scss
@@ -17,6 +17,7 @@
         >.notritional {
             >.nutri-info {
                 >div {
+                    gap: 0;
                     >div {
                         >p:nth-child(1) {
                             font-size: 16px;
@@ -28,6 +29,22 @@
                             font-weight: 600;
                         }
                     }
+
+                    >div:nth-child(1) {
+                        width: 75px;
+                    }
+
+                    >div:nth-child(2) {
+                        width: 60px;
+                    }
+
+                    >div:nth-child(3) {
+                        width: 40px;
+                    }
+
+                    >div:nth-child(4) {
+                        width: 50px;
+                    }
                 }
             }
         }
@@ -36,6 +53,7 @@
 
 @media (max-width: bp.$bp-md) {
     .title-div {
+        padding: 8px;
         flex-direction: column;
 
         >.title {
