--- a/src/app/selected-recipe/dish-title/dish-title.scss
+++ b/src/app/selected-recipe/dish-title/dish-title.scss
@@ -32,7 +32,7 @@
     }
 
     >.notritional {
-        min-width: 300px;
+        min-width: 325px;
         width: 30%;
         display: flex;
         flex-direction: column;
@@ -83,6 +83,22 @@
                         font-weight: 500;
                     }
                 }
+
+                // >div:nth-child(1) {
+                //     width: 230px;
+                // }
+
+                // >div:nth-child(2) {
+                //     width: 190px;
+                // }
+
+                // >div:nth-child(3) {
+                //     width: 100px;
+                // }
+
+                // >div:nth-child(4) {
+                //     width: 100px;
+                // }
             }
         }
     }
