--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header">
-        <img src="assets/images/header/vector.png" alt="icon">
-        <p>Code à <br>
+        <img (click)="navigateHome()" src="assets/images/header/vector.png" alt="icon">
+        <p (click)="navigateHome()">Code à <br>
             Cuisine</p>
     </div>
 </header>
