--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -16,11 +16,13 @@ header {
             font-size: 16px;
             font-weight: 600;
             margin-left: 8px;
+            cursor: pointer;
         }
 
         >img {
             width: 50px;
             height: 50px;
+            cursor: pointer;
         }
     }
 }
